adiciona emojis nas nomenclaturas dos templates

--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -1,4 +1,4 @@
-name: "Reportar Bug"
+name: "🪲 Reportar Bug"
 description: "Use este template para relatar um problema ou erro encontrado."
 title: "[BUG] Descrição do problema"
 labels:
