--- a/.github/ISSUE_TEMPLATE/feature_request.yml
+++ b/.github/ISSUE_TEMPLATE/feature_request.yml
@@ -1,4 +1,4 @@
-name: "Solicitação de Funcionalidade"
+name: "✨ Solicitação de Funcionalidade"
 description: "Use este template para sugerir uma nova funcionalidade ou melhoria."
 title: "[FEATURE] Nome da funcionalidade"
 labels:
